update license and remove dev stuff

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "ssvet/ahrefs-seo-kit",
 	"description": "Kit used by Ahrefs Seo plugin.",
-	"license": "GPL-2.0-or-later",
+	"license": "Apache-2.0",
 	"require": {
 		"php": ">=5.4",
 		"firebase/php-jwt": "~2.0|~3.0|~4.0|~5.0",
@@ -11,9 +11,6 @@
 		"psr/cache": "^1.0",
 		"monolog/monolog": "^1.17|^2.0",
 		"phpseclib/phpseclib": "~0.3.10||~2.0"
-	},
-	"require-dev": {
-		"bamarni/composer-bin-plugin": "^1.4"
 	},
 	"autoload": {
 		"psr-4": {
@@ -28,18 +25,6 @@
 		],
 		"classmap": [
 			"inc/google-apiclient/src/aliases.php"
-		]
-	},
-	"scripts": {
-		"prepare" : "composer install --no-dev --prefer-dist",
-		"build" : "php-scoper add-prefix --output-dir=inc --force",
-		"bin": "echo 'bin not installed'",
-		"post-install-cmd": ["@composer bin all install --ansi"],
-		"post-update-cmd": ["@composer bin all update --ansi" ]
-	},
-	"extra": {
-		"google/apiclient-services": [
-			"Analytics"
 		]
 	}
 }
